--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -119,11 +119,15 @@
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="DirectLight.cpp" />
     <ClCompile Include="InstanceObject.cpp" />
+    <ClCompile Include="LambertMaterial.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="MeshObject.cpp" />
+    <ClCompile Include="MetalMaterial.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="PlaneObject.cpp" />
     <ClCompile Include="PointLight.cpp" />
+    <ClCompile Include="RayTracer.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="SphereObject.cpp" />
     <ClCompile Include="Triangle.cpp" />
@@ -141,11 +145,13 @@
     <ClInclude Include="Light.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="MeshObject.h" />
+    <ClInclude Include="MetalMaterial.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="PlaneObject.h" />
     <ClInclude Include="PointLight.h" />
     <ClInclude Include="Ray.h" />
+    <ClInclude Include="RayTracer.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="SphereObject.h" />
