--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -166,5 +166,8 @@
     <Image Include="testProject.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="project3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
