--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="RayTracer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AshikhminMaterial.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Material.h">
@@ -146,6 +149,9 @@
     <ClInclude Include="RayTracer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AshikhminMaterial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -167,6 +173,9 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="project3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="project4.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
