--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -167,6 +167,7 @@
     <Image Include="project1.bmp" />
     <Image Include="project2.bmp" />
     <Image Include="project3.bmp" />
+    <Image Include="2Sampleproject4.bmp" />
     <Image Include="project4.bmp" />
     <Image Include="solution.bmp" />
     <Image Include="spheres.bmp" />
