--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="DirectLight.cpp" />
+    <ClCompile Include="PureFresnelMaterial.cpp" />
     <ClCompile Include="InstanceObject.cpp" />
     <ClCompile Include="LambertMaterial.cpp" />
     <ClCompile Include="main.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="DirectLight.h" />
+    <ClInclude Include="PureFresnelMaterial.h" />
     <ClInclude Include="InstanceObject.h" />
     <ClInclude Include="Intersection.h" />
     <ClInclude Include="LambertMaterial.h" />
@@ -164,6 +166,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="finalProject.bmp" />
     <Image Include="project1.bmp" />
     <Image Include="project2.bmp" />
     <Image Include="project3.bmp" />
